# IKP

./: CMakeLists.txt  dokumentacija.txt
src/: main.cpp  stress_test_1_scalability.cpp
src/client/: admin_client.cpp  publisher_client.cpp  subscriber_client.cpp
src/model/: subscriber.cpp  subscriber.h  topic.cpp  topic.h
src/network/: broker.cpp  broker.h  socket_utils.cpp  socket_utils.h
src/threading/: task.cpp  task.h  task_queue.cpp  task_queue.h  thread_pool.cpp  thread_pool.h
src/utils/: hash_map.cpp  hash_map.h  subscriber_list.cpp  subscriber_list.h
